--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,26 @@
 services:
-  postgres:
-    container_name: postgres
-    image: postgres
+  mysql:
+    container_name: mysql
+    image: mysql:latest
     environment:
-      POSTGRES_USER: username
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: rdv_db
-      PGDATA: /data/postgres
+      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_USER: username
+      MYSQL_PASSWORD: password
+      MYSQL_DATABASE: rdv_db
     volumes:
-      - postgres:/data/postgres
+      - mysql_data:/var/lib/mysql
     ports:
-      - "5432:5432"
+      - "3306:3306"
     restart: unless-stopped
 
-  pgadmin:
-    container_name: pgadmin
-    image: dpage/pgadmin4
+  phpmyadmin:
+    container_name: phpmyadmin
+    image: phpmyadmin/phpmyadmin
     environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
-      PGADMIN_CONFIG_SERVER_MODE: 'False'
-    volumes:
-      - pgadmin:/var/lib/pgadmin
+      PMA_HOST: mysql
+      MYSQL_ROOT_PASSWORD: rootpassword
     ports:
-      - "5050:80"
+      - "8082:80"
     restart: unless-stopped
 
   sonarqube:
@@ -32,10 +29,12 @@ services:
     ports:
       - "9000:9000"
     environment:
-      SONARQUBE_JDBC_URL: jdbc:postgresql://postgres:5432/rdv_db
+      SONARQUBE_JDBC_URL: jdbc:mysql://mysql:3306/rdv_db
       SONARQUBE_JDBC_USERNAME: username
       SONARQUBE_JDBC_PASSWORD: password
     restart: unless-stopped
+    depends_on:
+      - mysql
 
   nexus:
     container_name: nexus
@@ -46,10 +45,48 @@ services:
       - nexus-data:/nexus-data
     restart: unless-stopped
 
+  prometheus:
+    container_name: prometheus
+    image: prom/prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    restart: unless-stopped
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+
+  grafana:
+    container_name: grafana
+    image: grafana/grafana
+    depends_on:
+      - prometheus
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    volumes:
+      - grafana-data:/var/lib/grafana
+    restart: unless-stopped
+
+  devops-backend:
+    container_name: devops-backend
+    image: meherfe/devops-backend:latest
+    restart: unless-stopped
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/rdv_db
+      - SPRING_DATASOURCE_USERNAME=username
+      - SPRING_DATASOURCE_PASSWORD=password
+    ports:
+      - "8089:8089"
+    depends_on:
+      - mysql
+
 volumes:
-  postgres:
-    driver: local
-  pgadmin:
+  mysql_data:
     driver: local
   nexus-data:
+    driver: local
+  grafana-data:
     driver: local
