--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8089
 
-spring.datasource.url=jdbc:mysql://localhost:3306/rdv_db?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/rdv_db?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/rdv_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/rdv_db
 spring.datasource.username=username
 spring.datasource.password=password
 
